--- a/index.html
+++ b/index.html
@@ -5,65 +5,63 @@
     <meta charset="UTF-8" />
     <!--Added viewport meta tag to optimize webpage for tablets and mobile devices-->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!--CSS stylesheet was linked to the HTML file. I've confirmed the location via GitBash. I've confirmed that the CSS file is working with Chrome Devtoll under console section-->-->
+    <!--CSS stylesheet was linked to the HTML file. I've confirmed the location via GitBash. I've confirmed that the CSS file is working with Chrome Devtoll under console section-->
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
 </head>
 <body>
     <header>
-        <h1>Juan F. Grillo</h1>
-        <section>
-            <!---->
-            <nav>
-                <!---->
-                <a href="#ABOUT-ME">About Me</a>
-                <a href="#WORK">Work</a>
-                <a href="#CONTACT-ME">Contact Me</a>
-                <!---->
-                <a href="assets/files/Resume.pdf">Resume</a>
-            </nav>
-        </section>
+    <h1>Juan F. Grillo</h1>
+    <nav>
+        <!--Added navigation links-->
+        <a href="#ABOUT-ME">About Me</a>
+        <a href="#WORK">Work</a>
+        <a href="#CONTACT-ME">Contact Me</a>
+        <!--Added a link to the resume PDF file-->
+        <a href="assets/files/Resume.pdf">Resume</a>
+        </nav>
     </header>
-    <!---->
+        <!--Added a container for the main content-->
+    <div class="CONTAINER">
+        <!--Added an image with a background and a caption-->
+        <img src="assets/images/background.png" alt="Image with coding characters with the following text Transforming Ideas into User-Friendly, Efficient, and Visually Appealing Websites with Intuitive Navigation." style="width:100%;">
+        <div class="BOTTOM-RIGHT">Transforming Ideas into User-Friendly, Efficient, and Visually Appealing Websites with Intuitive Navigation.</div>
+    </div>
     <main>
-        <!---->
-        <div class="CONTAINER">
-            <!---->
-            <img src="assets/images/background.png" alt="Image with coding characters with the following text Transforming Ideas into User-Friendly, Efficient, and Visually Appealing Websites with Intuitive Navigation." style="width:100%;">
-            <!---->
-            <div class="BOTTOM-LEFT">Transforming Ideas into User-Friendly, Efficient, and Visually Appealing Websites with Intuitive Navigation.</div>
-        </div>
-    </main>
-    <!---->
+        <!--Added an aside element-->
     <aside>
-        <h2>About Me:</h2>
-        <h2>Work:</h2>
-        <h2>Contact Me:</h2>
+        <!--Added headings and IDs for the sections-->
+        <h2 class="ABOUT-ME" id="ABOUT-ME">About Me:</h2>
+        <br />
+        <h2 class="WORK" id="WORK">Work:</h2>
+        <br />
+        <h2 class="CONTACT-ME" id="CONTACT-ME">Contact Me:</h2>
     </aside>
-    <!---->
-        <section>
-            <!---->
-            <p>
-                I am fully bilingual and possess expert abilities in mathematics. My advanced MS Office skills allow me to handle various tasks with ease. Clear communication and the ability to use positive language are my strengths, creating a welcoming environment for others. With my acting skills, I can effectively connect with customers and provide exceptional service. Patience, attentiveness, and strong time management skills ensure that I am efficient in my work. I have a calming presence and can handle surprises with composure. My persuasion skills and tenacity contribute to my strong closing ability. I have a strong willingness to learn and an excellent memory, allowing me to continuously grow and adapt. Handling large amounts of money without any glitches is second nature to me, and I meticulously maintain records of daily transactions. Above all, loyalty is a core value of mine.
-            </p>
-            <!---->
-            <img id="SSS" src="assets/images/SSS.png" alt="SSS Logo" />
-            <img id="MCS" src="assets/images/MCS.png" alt="MCS Logo" />
-            <img id="LPC" src="assets/images/LPC.jpg" alt="LPC Logo"/>
-            <img id="SUSTECH" src="assets/images/SUSTECH.jpg" alt="Sustech Logo"/>
-            </section>
-        <section>
-                <!---->
-                <nav>
-                    <!---->
-                    <a href="tel:+19392670670">939.267.0670</a>
-                    <!---->
-                    <a href="mailto:jfrgm1986@gmail.com">E-mail</a>
-                    <!---->
-                    <a href="https://github.com/JuanFranciscoGrillo">GitHub</a>
-                    <a href="https://www.linkedin.com/in/juan-grillo-410836224/">LinkedIn</a>
-                </nav>
-            </section>
-<footer>
+        <!--Added a section for the paragraph, images, and contact information-->
+    <section class="PARAGRAPH,-IMAGES-&-CONTACT-ME-INFO" id="PARAGRAPH,-IMAGES-&-CONTACT-ME-INFO">
+        <!--Added a paragraph with information about me-->
+        <p class="ABOUT-ME-PARAGRAPH" id="ABOUT-ME-PARAGRAPH">
+        I am fully bilingual and possess expert abilities in mathematics. My advanced MS Office skills allow me to handle various tasks with ease. Clear communication and the ability to use positive language are my strengths, creating a welcoming environment for others. With my acting skills, I can effectively connect with customers and provide exceptional service. Patience, attentiveness, and strong time management skills ensure that I am efficient in my work. I have a calming presence and can handle surprises with composure. My persuasion skills and tenacity contribute to my strong closing ability. I have a strong willingness to learn and an excellent memory, allowing me to continuously grow and adapt. Handling large amounts of money without any glitches is second nature to me, and I meticulously maintain records of daily transactions. Above all, loyalty is a core value of mine.
+        </p>
+        <br />
+        <!--Added images with respective logos-->
+        <img id="SSS" src="assets/images/SSS.png" alt="SSS Logo" />
+        <img id="MCS" src="assets/images/MCS.png" alt="MCS Logo" />
+        <img id="LPC" src="assets/images/LPC.jpg" alt="LPC Logo" />
+        <img id="SUSTECH" src="assets/images/SUSTECH.jpg" alt="Sustech Logo" />
+        <br />
+     <!--Added a navigation section with contact information-->
+    <nav>
+        <!--Added a phone number link-->
+        <a href="tel:+19392670670">939.267.0670</a>
+        <!--Added an email link -->
+        <a href="mailto:jfrgm1986@gmail.com">E-mail</a>
+        <!--Added links to GitHub and LinkedIn profiles-->
+        <a href="https://github.com/JuanFranciscoGrillo">GitHub</a>
+        <a href="https://www.linkedin.com/in/juan-grillo-410836224/">LinkedIn</a>
+     </nav>
+    </section>
+    </main>
+    <footer>
         <h3></h3>
     </footer>
 </body>
