--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8" />
     <!--Added viewport meta tag to optimize webpage for tablets and mobile devices-->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!--CSS reset was linked to the HTML file. I've confirmed the location via GitBash.-->
+    <link rel="stylesheet" href="./assets/css/reset.css" />
     <!--CSS stylesheet was linked to the HTML file. I've confirmed the location via GitBash. I've confirmed that the CSS file is working with Chrome Devtoll under console section-->
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
 </head>
