--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
     <h1>Juan F. Grillo</h1>
     <nav>
-        <!--Added navigation links-->
+        <!--Added sidebar with navigation links-->
         <a href="#ABOUT-ME">About Me</a>
         <a href="#WORK">Work</a>
         <a href="#CONTACT-ME">Contact Me</a>
@@ -49,9 +49,8 @@
         <img id="SSS" src="assets/images/SSS.png" alt="SSS Logo" />
         <img id="MCS" src="assets/images/MCS.png" alt="MCS Logo" />
         <img id="LPC" src="assets/images/LPC.jpg" alt="LPC Logo" />
-        <img id="SUSTECH" src="assets/images/SUSTECH.jpg" alt="Sustech Logo" />
         <br />
-     <!--Added a navigation section with contact information-->
+        <!--Added a navigation bar with contact information-->
     <nav>
         <!--Added a phone number link-->
         <a href="tel:+19392670670">939.267.0670</a>
@@ -60,11 +59,10 @@
         <!--Added links to GitHub and LinkedIn profiles-->
         <a href="https://github.com/JuanFranciscoGrillo">GitHub</a>
         <a href="https://www.linkedin.com/in/juan-grillo-410836224/">LinkedIn</a>
-     </nav>
+    </nav>
     </section>
     </main>
     <footer>
-        <h3></h3>
     </footer>
 </body>
 </html>
