--- a/index.html
+++ b/index.html
@@ -11,57 +11,60 @@
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
 </head>
 <body>
+    <!--All the id and class attributes are going to appear in CAPS LOCK and with dashes (-) instead of spaces.-->
     <header>
     <h1>Juan F. Grillo</h1>
     <nav>
-        <!--Added sidebar with navigation links-->
+        <!-- <!--The href attribute has link attached to the section of the page that is located-->
         <a href="#ABOUT-ME">About Me</a>
         <a href="#WORK">Work</a>
         <a href="#CONTACT-ME">Contact Me</a>
-        <!--Added a link to the resume PDF file-->
+        <!-- <!--The href attribute has link attached to the resume PDF file-->
         <a href="assets/files/Resume.pdf">Resume</a>
-        </nav>
+    </nav>
     </header>
-        <!--Added a container for the main content-->
+        <!--A class attribute was given to edit the main content-->
     <div class="CONTAINER">
         <!--Added an image with a background and a caption-->
         <img src="assets/images/background.png" alt="Image with coding characters with the following text Transforming Ideas into User-Friendly, Efficient, and Visually Appealing Websites with Intuitive Navigation." style="width:100%;">
+        <!--A class element was given to input text inside the image-->
         <div class="BOTTOM-RIGHT">Transforming Ideas into User-Friendly, Efficient, and Visually Appealing Websites with Intuitive Navigation.</div>
     </div>
     <main>
-        <!--Added an aside element-->
+        <!--Added an aside element to place it to the left size of the screen-->
     <aside>
-        <!--Added headings and IDs for the sections-->
+        <!--Added headings and ID attributes for the sections to set edit height-->
         <h2 class="ABOUT-ME" id="ABOUT-ME">About Me:</h2>
         <br />
         <h2 class="WORK" id="WORK">Work:</h2>
         <br />
         <h2 class="CONTACT-ME" id="CONTACT-ME">Contact Me:</h2>
     </aside>
-        <!--Added a section for the paragraph, images, and contact information-->
+        <!--A class attribute was given to edit height and width and place it to the right of the screen-->
     <section class="PARAGRAPH,-IMAGES-&-CONTACT-ME-INFO" id="PARAGRAPH,-IMAGES-&-CONTACT-ME-INFO">
-        <!--Added a paragraph with information about me-->
+        <!--A class attribute was given to edit height, width and text-align-->
         <p class="ABOUT-ME-PARAGRAPH" id="ABOUT-ME-PARAGRAPH">
         I am fully bilingual and possess expert abilities in mathematics. My advanced MS Office skills allow me to handle various tasks with ease. Clear communication and the ability to use positive language are my strengths, creating a welcoming environment for others. With my acting skills, I can effectively connect with customers and provide exceptional service. Patience, attentiveness, and strong time management skills ensure that I am efficient in my work. I have a calming presence and can handle surprises with composure. My persuasion skills and tenacity contribute to my strong closing ability. I have a strong willingness to learn and an excellent memory, allowing me to continuously grow and adapt. Handling large amounts of money without any glitches is second nature to me, and I meticulously maintain records of daily transactions. Above all, loyalty is a core value of mine.
         </p>
         <br />
-        <!--Added images with respective logos-->
+        <!--Added images with ID's for editing image size-->
         <img id="SSS" src="assets/images/SSS.png" alt="SSS Logo" />
         <img id="MCS" src="assets/images/MCS.png" alt="MCS Logo" />
         <img id="LPC" src="assets/images/LPC.jpg" alt="LPC Logo" />
         <br />
         <!--Added a navigation bar with contact information-->
-    <nav>
-        <!--Added a phone number link-->
-        <a href="tel:+19392670670">939.267.0670</a>
-        <!--Added an email link -->
-        <a href="mailto:jfrgm1986@gmail.com">E-mail</a>
-        <!--Added links to GitHub and LinkedIn profiles-->
-        <a href="https://github.com/JuanFranciscoGrillo">GitHub</a>
-        <a href="https://www.linkedin.com/in/juan-grillo-410836224/">LinkedIn</a>
-    </nav>
+        <nav>
+            <!--The href link permits the user use phone number link to make call instantly-->
+            <a href="tel:+19392670670">939.267.0670</a>
+            <!--The href link permits the user to compose the e-mail instantly-->
+            <a href="mailto:jfrgm1986@gmail.com">E-mail</a>
+            <!--Added links to GitHub and LinkedIn profiles-->
+            <a href="https://github.com/JuanFranciscoGrillo">GitHub</a>
+            <a href="https://www.linkedin.com/in/juan-grillo-410836224/">LinkedIn</a>
+        </nav>
     </section>
     </main>
+    <!--Added footing for future editing-->
     <footer>
     </footer>
 </body>
