--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
     <h1>Juan F. Grillo</h1>
     <nav>
-        <!-- <!--The href attribute has link attached to the section of the page that is located-->
+        <!-- <!--The href attribute in the following 3 lines have a link attached that takes you to the section of the page that is located-->
         <a href="#ABOUT-ME">About Me</a>
         <a href="#WORK">Work</a>
         <a href="#CONTACT-ME">Contact Me</a>
